Fixed contact modal height issue on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -469,13 +469,11 @@ body {
   border-radius: 0.5rem;
   background-color: #db8876;
   width: 70rem;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
   padding: 2em;
 }
 @media only screen and (max-width: 767px) {
   .modal {
+    position: fixed;
     width: 100%;
     padding: 1em;
   }
@@ -517,7 +515,6 @@ body {
 .modal-form {
   display: flex;
   width: 100%;
-  height: 100%;
   flex-direction: column;
   align-items: flex-start;
 }
