--- a/sass/pages/_photographer.scss
+++ b/sass/pages/_photographer.scss
@@ -229,10 +229,10 @@
     border-radius: 0.5rem;
     background-color: #db8876;
     width: 70rem;
-    height: fit-content;
     padding: 2em;
 
     @include for-mobile {
+        position: fixed;
         width: 100%;
         padding: 1em;
     }
@@ -276,7 +276,6 @@
     &-form {
         display: flex;
         width: 100%;
-        height: 100%;
         flex-direction: column;
         align-items: flex-start;
     }
